--- a/kernel/arch/arm64/boot/dts/allwinner/sun50i-h616-biqu.dts
+++ b/kernel/arch/arm64/boot/dts/allwinner/sun50i-h616-biqu.dts
@@ -18,6 +18,7 @@
 
 	aliases {
 		ethernet0 = &emac1;
+        // ethernet1 = &emac1;
 		serial0 = &uart0;
 	};
 
@@ -173,7 +174,7 @@
 	status = "okay";
 };
 
-&mdio1 {
+&mdio0 {
 	ext_rgmii_phy: ethernet-phy@1 {
 		compatible = "ethernet-phy-ieee802.3-c22";
 		reg = <1>;
@@ -188,13 +189,14 @@
 	phy-supply = <&reg_dldo1>;
 	allwinner,rx-delay-ps = <3100>;
 	allwinner,tx-delay-ps = <700>;
-	status = "okay";
+	// status = "okay";
+    status = "disabled";
 };
 
-&mdio0 {
-	rmii_phy: ethernet-phy@0 {
+&mdio1 {
+	rmii_phy: ethernet-phy@1 {
 		compatible = "ethernet-phy-ieee802.3-c22";
-		reg = <0>;
+		reg = <1>;
 	};
 };
 
